<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditRecipeActivity">

    <TextView
        android:id="@+id/lblNameOfRecipe"
        android:layout_width="150dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:text="@string/addrecipes_name"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="16sp"
        android:visibility="visible"
        android:textColor="@color/thirty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblRecipeDescription"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/addrecipes_description"
        android:textAlignment="center"
        android:textColor="@color/thirty"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNameOfRecipe" />

    <TextView
        android:id="@+id/lblRecipeIngredients"
        android:layout_width="150dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/thirty"
        android:clickable="false"
        android:text="@string/addrecipes_ingredients"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRecipeDescription" />

    <TextView
        android:id="@+id/lblRecipeInstructions"
        android:layout_width="150dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:clickable="false"
        android:textColor="@color/thirty"
        android:text="@string/addrecipes_instructions"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRecipeIngredients" />

    <TextView
        android:id="@+id/lblUploadPhoto"
        android:layout_width="150dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="158dp"
        android:clickable="false"
        android:text="@string/addrecipes_upload"
        android:textAlignment="center"
        android:textColor="@color/thirty"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRecipeInstructions" />

    <Button
        android:id="@+id/btnEditRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:backgroundTint="@color/ten"
        android:text="@string/editrecipes_editButton"
        android:textColor="@color/thirty"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:backgroundTint="@color/ten"
        android:text="@string/backButton"
        android:textColor="@color/thirty"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEditName"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/addrecipes_hintName"
        android:maxLength="20"
        android:textColor="@color/thirty"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/txtEditDescription"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/addrecipes_hintDescription"
        android:maxLength="50"
        android:textSize="16sp"
        android:visibility="visible"
        android:textColor="@color/thirty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditName"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/txtEditIngredients"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/addrecipes_hintIngredients"
        android:textSize="16sp"
        android:gravity="start|top"
        android:textColor="@color/thirty"
        android:inputType="textMultiLine"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditDescription" />

    <EditText
        android:id="@+id/txtEditInstructions"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:textColor="@color/thirty"
        android:gravity="start|top"
        android:hint="@string/addrecipes_hintInstructions"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditIngredients" />

    <Button
        android:id="@+id/btnAddPhoto"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/ten"
        android:text="@string/editrecipes_editPhotoButton"
        android:textColor="@color/thirty"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditInstructions" />

</androidx.constraintlayout.widget.ConstraintLayout>