<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addrecipes.AddRecipesFragment">

    <TextView
        android:id="@+id/lblNameOfRecipe"
        android:layout_width="150dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:text="@string/addrecipes_name"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/thirty"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblRecipeDescription"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/addrecipes_description"
        android:textAlignment="center"
        android:textColor="@color/thirty"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNameOfRecipe" />

    <TextView
        android:id="@+id/lblRecipeIngredients"
        android:layout_width="150dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/addrecipes_ingredients"
        android:textAlignment="center"
        android:textColor="@color/thirty"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRecipeDescription" />

    <TextView
        android:id="@+id/lblRecipeInstructions"
        android:layout_width="150dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="138dp"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/addrecipes_instructions"
        android:textAlignment="center"
        android:textColor="@color/thirty"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRecipeIngredients" />

    <TextView
        android:id="@+id/lblUploadPhoto"
        android:layout_width="150dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:clickable="false"
        android:text="@string/addrecipes_upload"
        android:textAlignment="center"
        android:textColor="@color/thirty"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRecipeInstructions" />

    <Button
        android:id="@+id/btnAddRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:onClick="onClickAdd"
        android:text="@string/addrecipes_addButton"
        android:textColor="@color/thirty"
        android:backgroundTint="@color/ten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/addrecipes_hintName"
        android:maxLength="20"
        android:textColor="@color/thirty"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/addrecipes_hintDescription"
        android:maxLength="50"
        android:textColor="@color/thirty"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/txtIngredients"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/addrecipes_hintIngredients"
        android:inputType="textMultiLine"
        android:textColor="@color/thirty"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <EditText
        android:id="@+id/txtInstructions"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/addrecipes_hintInstructions"
        android:inputType="textMultiLine"
        android:textColor="@color/thirty"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIngredients" />

    <Button
        android:id="@+id/btnAddPhoto"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/ten"
        android:text="@string/addrecipes_addPhotoButton"
        android:textColor="@color/thirty"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInstructions" />

</androidx.constraintlayout.widget.ConstraintLayout>